        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=13445
        NodeList access by index is slow

        * dom/ChildNodeList.cpp:
        (WebCore::ChildNodeList::item): Support iterating backwards from the last accessed node
        or from the last child.
        * dom/NodeList.h: Make cachedLength unsigned.



Canonical link: https://commits.webkit.org/17612@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21090 268f45cc-cd09-0410-ab3c-d52691b4dbfc