WebCore/dom/NodeList.h
@@ -42,7 +42,7 @@ public:
         Caches();
         void reset();
         
-        int cachedLength;
+        unsigned cachedLength;
         Node* lastItem;
         unsigned lastItemOffset;
         bool isLengthCacheValid : 1;
